--- a/source/pug/pages/escaperoom/escaperoom-book.pug
+++ b/source/pug/pages/escaperoom/escaperoom-book.pug
@@ -1,6 +1,4 @@
 include ../../base/mixins
-include ../../base/header
-include ../../base/footer
 
 block data
 
@@ -32,7 +30,8 @@ html(lang="ru")
     link(rel="stylesheet", href="../css/style2.min.css")
 
   body.bodybook
-    include ../../../../build/img2/sprite_auto.svg
+    div(style="display:none")
+        include ../../../../build/img2/sprite_auto.svg
     header.page-header.page-header--index.page-header--nojs.page-header--closed
         .page-header__logo
             a(href="escaperoom.html" aria-label="на главную")
