добавляет блоки stack и projects

--- a/source/pug/base/footer.pug
+++ b/source/pug/base/footer.pug
@@ -1,2 +1,4 @@
 mixin footer(footerMod)
-  footer.page-footer
+  footer.footer
+    .container 
+      p.footer__text Copyright 2021. All rights reserved
