--- a/source/sass/portfolio/blocks/header.scss
+++ b/source/sass/portfolio/blocks/header.scss
@@ -19,7 +19,7 @@
 
     &__link {        
             font-size: 16px;
-            font-family: "MyriadPro", "Arial", sans-serif;
+            font-family: $font-family-secondary;
             color: rgb(255, 255, 255);
             line-height: 1.25;   
             text-decoration: none;
