--- a/source/sass/portfolio/general.scss
+++ b/source/sass/portfolio/general.scss
@@ -15,7 +15,7 @@ body {
   padding: 0;
   font-size: 16px;
   line-height: 1.38;
-  font-family: "Rubik", "Arial", sans-serif;
+  font-family: $font-family-primary;
   font-weight: normal;
   font-stretch: normal;
   font-style: normal;
