--- a/source/sass/portfolio/style.scss
+++ b/source/sass/portfolio/style.scss
@@ -4,4 +4,7 @@
 @import "general";
 @import "blocks/header";
 @import "blocks/intro";
+@import "blocks/stack";
+@import "blocks/projects";
+@import "blocks/footer";
 
