добавляет moveto и заполняет блок stack

--- a/source/pug/base/header.pug
+++ b/source/pug/base/header.pug
@@ -3,11 +3,11 @@ mixin header(headerMod, currentPage)
     .container
       ul.header__list      
         li.header__item 
-          a.header__link(href="#") Мой стек  
+          a.header__link(href="#stack") Мой стек  
         li.header__item 
-          a.header__link(href="#") Проекты    
+          a.header__link(href="#projects") Проекты    
         li.header__item 
-          a.header__link(href="#") Обо мне 
+          a.header__link(href="#about") Обо мне 
         li.header__item 
-          a.header__link(href="#") Контакты
+          a.header__link(href="#contacts") Контакты
       
