--- a/source/sass/portfolio/style.scss
+++ b/source/sass/portfolio/style.scss
@@ -2,6 +2,11 @@
 @import "fonts";
 @import "mixins";
 @import "general";
+
+// components
+@import "components/btn";
+
+// blocks
 @import "blocks/header";
 @import "blocks/intro";
 @import "blocks/stack";
