--- a/source/pug/base/layout.pug
+++ b/source/pug/base/layout.pug
@@ -37,4 +37,4 @@ html(lang="ru")
     block modals
 
     script(src="../js/vendor.min.js")
-    script(src="../js/honey.min.js")
+    script(src="../js/main.min.js")
