--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -18,19 +18,51 @@ block main
         h1.intro__title Кирилл Моргунов
         p.intro__description Фронтенд-разработчик
         button.btn.intro__btn Скачать резюме         
-    .stack 
+    .stack#stack 
       .container 
         h2.stack__title Мой стек
         ul.stack__list 
-          li.stack__item Html 5
-          li.stack__item CSS 3
-          li.stack__item Pug
-          li.stack__item Javascript
-          li.stack__item React
-          li.stack__item Git
-          li.stack__item Gulp
-          li.stack__item Webpack
-    .projects 
+          li.stack__item
+            h3.stack__heading Html 5
+            .stack__image
+              img(src="img/html5.png" width=200 height=300 alt="html5")
+          li.stack__item 
+            h3.stack__heading CSS 3
+            .stack__image
+              img(src="img/css3.png" width=200 height=300 alt="css")
+          li.stack__item 
+            h3.stack__heading Pug
+            .stack__image
+              img(src="img/pug.png" width=200 height=300 alt="pug")
+          li.stack__item 
+            h3.stack__heading Javascript
+            .stack__image
+              img(src="img/js.png" width=200 height=300 alt="js")
+          li.stack__item 
+            h3.stack__heading React
+            .stack__image
+              img(src="img/react.png" width=200 height=300 alt="react")
+          li.stack__item 
+            h3.stack__heading Git
+            .stack__image
+              img(src="img/git2.png" width=200 height=300 alt="git")
+          li.stack__item 
+            h3.stack__heading Gulp
+            .stack__image
+              img(src="img/gulp.png" width=200 height=300 alt="gulp")
+          li.stack__item 
+            h3.stack__heading Webpack
+            .stack__image
+              img(src="img/webpack.png" width=200 height=300 alt="webpack")
+          li.stack__item 
+            h3.stack__heading Photoshop
+            .stack__image
+              img(src="img/photoshop.jpg" width=200 height=300 alt="photoshop")
+          li.stack__item 
+            h3.stack__heading Figma
+            .stack__image
+              img(src="img/figma.png" width=200 height=300 alt="figma")
+    .projects#projects  
       .container 
         h2.projects__title Мои проекты
         p.projects__description Несколько выполненных работ для демострации навыков
@@ -42,6 +74,13 @@ block main
           li.projects__item 
             a.projects__link(href="honey/honey.html") Honey - мёд на любой вкус! (без адаптива - 2 страницы)
           li.projects__item.projects__item--big 
-            a.projects__link(href="escaperoom/escaperoom.html") Escaperoom - страница квестов в реальности (адаптив мобильная, планшетная, десктопная версии - несколько страниц)   
+            a.projects__link(href="escaperoom/escaperoom.html") Escaperoom - страница квестов в реальности (адаптив мобильная, планшетная, десктопная версии - несколько страниц) 
+    .about#about 
+      .container 
+        h2.projects__title Обо мне
+    .contacts#contacts 
+      .container 
+        h2.projects__title Контакты
+
          
 
