--- a/source/sass/portfolio/blocks/stack.scss
+++ b/source/sass/portfolio/blocks/stack.scss
@@ -3,12 +3,12 @@
     padding-top: 90px;
 
     &__title {
-        font-size: 24px;
+        font-size: 50px;
         font-family: $font-family-primary;
         color: rgb(0, 0, 0);
         line-height: 1.417; 
         text-align: center;
-        margin: 0 0 40px 0;
+        margin: 0 0 90px 0;
     }
 
 
@@ -17,16 +17,41 @@
         padding: 0;
         list-style: none;
         display: flex;
-        flex-wrap: wrap;    
-        justify-content: space-between;    
+        flex-wrap: wrap;           
     }
+    
 
     &__item {
-        width: calc(33.3% - 33px);
+        $gutter: 50px;
+        $card-count: 3;
+        width: calc(100% / #{$card-count} - #{$gutter} * (#{$card-count} - 1) / #{$card-count});
+        margin-right: $gutter;
+        text-align: center;
+        background-color: #000000;
+        display: flex;
+        flex-direction: column;
+    
+        &:nth-of-type(#{$card-count}n) {
+          margin-right: 0;
+        }
+        
         min-height: 225px;
         box-shadow: 0 0 9px 0 rgba(73, 73, 73, 0.4);
         margin-bottom: 50px;
         padding: 30px;
     }  
+
+    &__image {
+        flex-grow: 1;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+    }
+
+    &__heading {
+        font-size: 36px;
+        margin: 0 0 20px 0;
+        color: #ffffff;
+    }
 }
 
