--- a/source/pug/mixins/basic/sprite.pug
+++ b/source/pug/mixins/basic/sprite.pug
@@ -1,4 +1,4 @@
 mixin sprite()
 
   div(style="display:none")
-      include ../../../../build/img1/sprite_auto.svg
+      include ../../../../build/img/sprite_auto.svg
