--- a/source/sass/portfolio/blocks/projects.scss
+++ b/source/sass/portfolio/blocks/projects.scss
@@ -30,21 +30,50 @@
             grid-gap: 30px;
     }
 
-    &__item {  
-        outline: 1px solid red;     
+    &__item {          
         min-height: 295px;    
-        
+       
+
         &--big {
                 grid-column: span 2;
         }
     }
 
     &__link {
+        position: relative;
         color: #ffffff;
         text-decoration: none;
         display: block;
         width: 100%;
         height: 100%;
         padding: 30px;
+        transition: transform 0.3s ease;
+        border-radius: 20px;
+        outline: none;
+     
+        span {
+                position: relative;
+                z-index: 1;
+        }
+
+        img {
+                border-radius: 20px;
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 100%;      
+                object-fit: cover;       
+        }
+
+        &:focus {
+                outline: 1px solid red;
+        }
+     
+        &:hover {
+                position: relative;
+                z-index: 2;
+                transform: scale(1.1);
+        }
     }
 }
