--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -43,42 +43,62 @@ block main
             h3.stack__heading Html 5
             .stack__image
               img(src="img/html5.png" width=200 height=300 alt="html5")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading CSS 3
             .stack__image
               img(src="img/css3.png" width=200 height=300 alt="css")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Pug
             .stack__image
               img(src="img/pug.png" width=200 height=300 alt="pug")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Javascript
             .stack__image
               img(src="img/js.png" width=200 height=300 alt="js")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading React
             .stack__image
               img(src="img/react.png" width=200 height=300 alt="react")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Git
             .stack__image
               img(src="img/git2.png" width=200 height=300 alt="git")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Gulp
             .stack__image
               img(src="img/gulp.png" width=200 height=300 alt="gulp")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Webpack
             .stack__image
               img(src="img/webpack.png" width=200 height=300 alt="webpack")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Photoshop
             .stack__image
               img(src="img/photoshop.jpg" width=200 height=300 alt="photoshop")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
           li.stack__item 
             h3.stack__heading Figma
             .stack__image
               img(src="img/figma.png" width=200 height=300 alt="figma")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
     .projects#projects  
       .container 
         h2.projects__title Мои проекты
