--- a/source/sass/portfolio/blocks/intro.scss
+++ b/source/sass/portfolio/blocks/intro.scss
@@ -1,6 +1,20 @@
 .intro {     
         padding-top: 347px;
         padding-bottom: 325px;
+        position: relative;
+      
+
+        &::before {
+                content: "";
+                position: absolute;
+                top: 0;
+                left: 0;
+                width: 100%;
+                height: 120%;
+                background-image: url("../img/top-bg.svg");
+                background-repeat: no-repeat;       
+                background-size: cover;        
+        }
 
         .container {
                 position: relative;
