--- a/source/sass/portfolio/blocks/projects.scss
+++ b/source/sass/portfolio/blocks/projects.scss
@@ -1,6 +1,7 @@
 .projects {
     padding-top: 90px;
     padding-bottom: 100px;
+    background-color: #000000;
 
     &__title {       
             font-size: 50px;
