--- a/source/sass/portfolio/style.scss
+++ b/source/sass/portfolio/style.scss
@@ -13,4 +13,6 @@
 @import "blocks/projects";
 @import "blocks/footer";
 @import "blocks/socials";
+@import "blocks/about";
+@import "blocks/contacts";
 
