--- a/source/sass/portfolio/blocks/intro.scss
+++ b/source/sass/portfolio/blocks/intro.scss
@@ -2,19 +2,8 @@
         padding-top: 347px;
         padding-bottom: 325px;
         position: relative;
+        background-color: #000000;
       
-
-        &::before {
-                content: "";
-                position: absolute;
-                top: 0;
-                left: 0;
-                width: 100%;
-                height: 120%;
-                background-image: url("../img/top-bg.svg");
-                background-repeat: no-repeat;       
-                background-size: cover;        
-        }
 
         .container {
                 position: relative;
