--- a/source/sass/portfolio/blocks/projects.scss
+++ b/source/sass/portfolio/blocks/projects.scss
@@ -68,7 +68,7 @@
         }
 
         &:focus {
-                outline: 1px solid red;
+                box-shadow: 0 0 15px 0 rgba(255, 255, 255, 1);            
         }
      
         &:hover {
