--- a/source/sass/portfolio/blocks/intro.scss
+++ b/source/sass/portfolio/blocks/intro.scss
@@ -25,4 +25,8 @@
                 line-height: 1.75;  
                 margin: 0 0 40px 0;        
         }
+
+        &__btn {
+                text-decoration: none;
+        }
 }
