--- a/source/sass/portfolio/variables.scss
+++ b/source/sass/portfolio/variables.scss
@@ -1,2 +1,3 @@
 $font-family-primary: "Rubik", "Arial", sans-serif;
 $font-family-secondary: "MyriadPro", "Arial", sans-serif;
+$default-transition-settings: 0.3s ease;
