добавляет пункты stack__info

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -59,54 +59,124 @@ block main
               img(src="img/css3.png" width=200 height=300 alt="css")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Использую @media-запросы для адаптивности
+                li.stack__feature Flex-layout
+                li.stack__feature Grid-layout
+                li.stack__feature Использую autoprefixer для поддержки разных браузеров
+                li.stack__feature Использую препроцессоры (в основном SASS)
+                li.stack__feature Переменные, миксины для ускорения верстки             
+                li.stack__feature Имею опыт работы с легаси кодом, если нужно могу использовать float и display table layouts         
           li.stack__item 
             h3.stack__heading Pug
             .stack__image
               img(src="img/pug.png" width=200 height=300 alt="pug")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Pug - мой основной инструмент верстки
+                li.stack__feature Использую формулы, data, миксины
+                li.stack__feature Использую БЭМ
+                li.stack__feature Использую include        
           li.stack__item 
             h3.stack__heading Javascript
             .stack__image
               img(src="img/js.png" width=200 height=300 alt="js")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
-          li.stack__item 
-            h3.stack__heading React
-            .stack__image
-              img(src="img/react.png" width=200 height=300 alt="react")
-            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
-              +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature В основном использую чистый Javascript
+                li.stack__feature Есть опыт работы с библиотеками (jQuery, lodash)
+                li.stack__feature Использую современный стандарт ES6
+                li.stack__feature Понимаю принцип модульности
+                li.stack__feature Придерживаюсть принципа DRY            
+                li.stack__feature Могу настроить фильтрацию (при получении данных через JSON)
+                li.stack__feature Хороший опыт настройки API карт (Yandex)         
           li.stack__item 
             h3.stack__heading Git
             .stack__image
               img(src="img/git2.png" width=200 height=300 alt="git")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Работаю с гитом через консоль
+                li.stack__feature Использую checkout, merge, pull, fetch, push, stash
+                li.stack__feature Имею опыт коммандной разработки нескольких проектов, с паралельным мерджем веток от нескольких разработчиков            
+                li.stack__feature Понимаю и знаю как исправлять конфликты веток      
           li.stack__item 
             h3.stack__heading Gulp
             .stack__image
               img(src="img/gulp.png" width=200 height=300 alt="gulp")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Могу полностью собрать кастомную сборку
+                li.stack__feature Использую в связке с webpack
+                li.stack__feature для проставки префиксов (autoprefixer)
+                li.stack__feature для оптимизации графики (imagemin, webp, svgo)
+                li.stack__feature для создания svg-спрайтов
+                li.stack__feature для разработки (browsersync)
           li.stack__item 
             h3.stack__heading Webpack
             .stack__image
               img(src="img/webpack.png" width=200 height=300 alt="webpack")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Использую семантические теги
+                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
+                li.stack__feature mobile-first или desktop-first
+                li.stack__feature Использую БЭМ
+                li.stack__feature Уделаю внимание доступности, использую best practices
+                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
           li.stack__item 
             h3.stack__heading Photoshop
             .stack__image
               img(src="img/photoshop.jpg" width=200 height=300 alt="photoshop")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Использую семантические теги
+                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
+                li.stack__feature mobile-first или desktop-first
+                li.stack__feature Использую БЭМ
+                li.stack__feature Уделаю внимание доступности, использую best practices
+                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
           li.stack__item 
             h3.stack__heading Figma
             .stack__image
               img(src="img/figma.png" width=200 height=300 alt="figma")
             button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
               +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Использую семантические теги
+                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
+                li.stack__feature mobile-first или desktop-first
+                li.stack__feature Использую БЭМ
+                li.stack__feature Уделаю внимание доступности, использую best practices
+                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
+          li.stack__item 
+            h3.stack__heading React
+            .stack__image
+              img(src="img/react.png" width=200 height=300 alt="react")
+            button.stack__btn(type="button" aria-label="раскрыть дополнительную информацию")
+              +icon("icon-arrowsmall", 25, 25)
+            div.stack__info
+              ul.stack__features
+                li.stack__feature Использую семантические теги
+                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
+                li.stack__feature mobile-first или desktop-first
+                li.stack__feature Использую БЭМ
+                li.stack__feature Уделаю внимание доступности, использую best practices
+                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
     .projects#projects  
       .container 
         h2.projects__title Мои проекты
