добавляет информацию в stackCards

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -129,12 +129,10 @@ block main
               +icon("icon-arrowsmall", 25, 25)
             div.stack__info
               ul.stack__features
-                li.stack__feature Использую семантические теги
-                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
-                li.stack__feature mobile-first или desktop-first
-                li.stack__feature Использую БЭМ
-                li.stack__feature Уделаю внимание доступности, использую best practices
-                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
+                li.stack__feature Использую в связке с gulp
+                li.stack__feature Могу создать несколько бандлов, модульно подключить к разным страницам разные бандлы
+                li.stack__feature Понимаю подключение plugins, modules, rules
+                li.stack__feature Режимы dev, prod              
           li.stack__item 
             h3.stack__heading Photoshop
             .stack__image
@@ -143,12 +141,10 @@ block main
               +icon("icon-arrowsmall", 25, 25)
             div.stack__info
               ul.stack__features
-                li.stack__feature Использую семантические теги
-                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
-                li.stack__feature mobile-first или desktop-first
-                li.stack__feature Использую БЭМ
-                li.stack__feature Уделаю внимание доступности, использую best practices
-                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
+                li.stack__feature Импортирую графику из psd
+                li.stack__feature Оптимизация графики, изменение размера изображний
+                li.stack__feature Слои, наложение, группы слоев, импорт группы слоев
+                li.stack__feature Удаление фона, добавление прозрачности           
           li.stack__item 
             h3.stack__heading Figma
             .stack__image
@@ -157,12 +153,9 @@ block main
               +icon("icon-arrowsmall", 25, 25)
             div.stack__info
               ul.stack__features
-                li.stack__feature Использую семантические теги
-                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
-                li.stack__feature mobile-first или desktop-first
-                li.stack__feature Использую БЭМ
-                li.stack__feature Уделаю внимание доступности, использую best practices
-                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
+                li.stack__feature Figma - мой основной инструмент для макетов
+                li.stack__feature Импортирую графику из Figma
+                li.stack__feature Слои, наложение, группы слоев, импорт группы слоев               
           li.stack__item 
             h3.stack__heading React
             .stack__image
@@ -171,12 +164,12 @@ block main
               +icon("icon-arrowsmall", 25, 25)
             div.stack__info
               ul.stack__features
-                li.stack__feature Использую семантические теги
-                li.stack__feature Верстаю адаптивные дизайны, responsive-дизайны
-                li.stack__feature mobile-first или desktop-first
-                li.stack__feature Использую БЭМ
-                li.stack__feature Уделаю внимание доступности, использую best practices
-                li.stack__feature Проверяю производительность (lighthouse) для максимального performance    
+                li.stack__feature Базовые знания React
+                li.stack__feature Понимаю state, жизненные циклы компонентов (componentDidMount, componentWillMount и т.д.)        
+                li.stack__feature Использую routing(react-router-dom)       
+                li.stack__feature Использую как фукциональные компоненты, так и классовые
+                li.stack__feature Небольшой опыт использования state-менеджера Redux
+                li.stack__feature Небольшой опыт использования React-hooks (useState, useEffect, useMemo, useContext)
     .projects#projects  
       .container 
         h2.projects__title Мои проекты
