добавляет ссылку на github

--- a/source/pug/pages/index.pug
+++ b/source/pug/pages/index.pug
@@ -34,10 +34,14 @@ block main
           li.socials__item 
             a.socials__link(href="https://twitter.com/R0bur" target="_blank" rel="noopener noreferrer")
               +icon('icon-twitter', 26, 22)
-              span Twitter  
+              span Twitter       
+          li.socials__item 
+            a.socials__link(href="https://github.com/MorgunovKirill" target="_blank" rel="noopener noreferrer")
+              +icon('icon-github', 30, 30)
+              span Github       
     .stack#stack 
       .container 
-        h2.stack__title Мой стек
+        h2.stack__title Мой стек       
         ul.stack__list 
           li.stack__item
             h3.stack__heading Html 5
