--- a/source/pug/pages/honey/honey.pug
+++ b/source/pug/pages/honey/honey.pug
@@ -159,3 +159,5 @@ html(lang="ru")
             form.news__form(action="#" method="post")
               input(type="email" placeholder="email@example.com")
               button.button(type="submit") Отправить
+    script(src="../js/vendor.min.js")
+    script(src="../js/honey.min.js")
