правит классы в escaperoom

--- a/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
+++ b/source/pug/pages/escaperoom/escaperoom-selectQuest.pug
@@ -62,23 +62,23 @@ html(lang="ru")
                     a(href="#")
                         +icon("icon-allquests", "26", "30")
                         span Все квесты
-                li.select__item.select__item--active.select__item--adventures
+                li.select__item.select__item--adventures
                     a(href="#")
                         +icon("icon-adventures", "36", "30")
                         span Приключения
-                li.select__item.select__item--active.select__item--horror
+                li.select__item.select__item--horror
                     a(href="#")
                         +icon("icon-horror", "30", "30")
                         span Ужасы
-                li.select__item.select__item--active.select__item--mysticism
+                li.select__item.select__item--mysticism
                     a(href="#")
                         +icon("icon-mysticism", "30", "30")
                         span Мистика
-                li.select__item.select__item--active.select__item--detective
+                li.select__item.select__item--detective
                     a(href="#")
                         +icon("icon-detective", "40", "30")
                         span Детектив
-                li.select__item.select__item--active.select__item--sci-fi
+                li.select__item.select__item--sci-fi
                     a(href="#")
                         +icon("icon-sci-fi", "28", "30")
                         span Sci-fi
@@ -214,13 +214,13 @@ html(lang="ru")
             ul.modal__list
                 li.modal__list-item.modal__list-item--active
                     a(href="#") Новосибирск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Иркутск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Смоленск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Волгоград 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Комсомольск-на-Амуре 
         .modal.modal--question 
             button.modal__close(aria-label="закрыть")
