--- a/source/pug/pages/escaperoom/escaperoom.pug
+++ b/source/pug/pages/escaperoom/escaperoom.pug
@@ -79,13 +79,13 @@ html(lang="ru")
             ul.modal__list
                 li.modal__list-item.modal__list-item--active
                     a(href="#") Новосибирск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Иркутск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Смоленск 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Волгоград 
-                li.modal__list-item.modal__list-item--active
+                li.modal__list-item
                     a(href="#") Комсомольск-на-Амуре 
         .modal.modal--question 
             button.modal__close(aria-label="закрыть")
